--- a/PVB Stage Applicatie/Content/todo.txt
+++ b/PVB Stage Applicatie/Content/todo.txt
@@ -1,35 +1,35 @@
 ﻿Doen:
- Leraar aanmaken login 
- Gek behavour login
- Gek behaviour loguit - refresh,  nog ingelogd?
- Periode aanpassen
+ ----------------------------------------------------------Leraar aanmaken login 
+ ----------------------------------------------------------Gek behavour login
+ ----------------------------------------------------------Gek behaviour loguit - refresh,  nog ingelogd?
+ ----------------------------------------------------------Periode aanpassen
  Formulieren invoer chek0n
  Gespreks formulier editen
- Return na het aanmaken van een formulier
+ -----------------------------------------------------------Return na het aanmaken van een formulier
  Een einde beoordeling of Tussentijdsbeeindiging
- Views doorwerken
- Link bar
- Handtekeningen verbergen bij telefonisch
+ -----------------------------------------------------------Views doorwerken?
+ -----------------------------------------------------------Link bar?
+ -----------------------------------------------------------Handtekeningen verbergen bij telefonisch
  Gesprekformulier return, fout
- Naamgevingen en in tekst
- Invullen entity voor tussentijdstebeeindiging
- Details pagina style
- ----------------------------------------------------------Bedrijf, unieke naam afvangen
- Stagiair create new in sidebar
- ----------------------------------------------------------Stagiair edit & create unieke velden
- Stagiair create velden
- Stagiair bulk invoer link
- Docent login creatie
- Docent bulk invoerlink
------------------------------------------------------------ Docent edit 404
- Periode edit alleen als die leeg is
- Periode details link achterin
- Koppeling index periode
+ Naamgevingen en in tekst?
+ -----------------------------------------------------------Invullen entity voor tussentijdstebeeindiging
+ -----------------------------------------------------------Details pagina style
+ -----------------------------------------------------------Bedrijf, unieke naam afvangen
+ -----------------------------------------------------------Stagiair create new in sidebar
+ -----------------------------------------------------------Stagiair edit & create unieke velden
+ -----------------------------------------------------------Stagiair create velden
+ -----------------------------------------------------------Stagiair bulk invoer link
+ -----------------------------------------------------------Docent login creatie
+ -----------------------------------------------------------Docent bulk invoerlink
+ -----------------------------------------------------------Docent edit 404
+ -----------------------------------------------------------Periode edit alleen als die leeg is
+ -----------------------------------------------------------Periode details link achterin
+ -----------------------------------------------------------Koppeling index periode
  Koppeling details info
- Koppeling create new sidebar
+ -----------------------------------------------------------Koppeling create new sidebar
  Koppeling Namen dropdown
- Alle bulk invoer links na gaan
- Begeleider edit
+ -----------------------------------------------------------Alle bulk invoer links na gaan
+ -----------------------------------------------------------Begeleider edit
 
  ^ als admin
  Als leraar	
@@ -48,9 +48,9 @@ Formulier index -
  Gespreksformulier -
 
 Mooi maken:
- Student aanmaken
- Controllers & views, onnodige shit
- Alle datum format Kris
+ -----------------------------------------------------------Student aanmaken
+ -----------------------------------------------------------Controllers & views, onnodige shit
+ -----------------------------------------------------------Alle datum format Kris
  Styling sidebar
 
 Optioneel:
